better workaround for non-cached csrf

--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -35,9 +35,7 @@
 						{% from _self import errorList %}
 
 						<form method="post" action="" accept-charset="UTF-8" id="ajax-contact">
-							{% nocache %}
-								{{ csrfInput() }}
-							{% endnocache %}
+							${csrfInput}
 							<input type="hidden" name="action" value="contact-form/send">
 							{# {{ redirectInput('pages/contact') }} #}
 							<div class="small-12" itemprop="text">
