--- a/templates/layouts/_default.twig
+++ b/templates/layouts/_default.twig
@@ -1,5 +1,6 @@
 {% set description = entry.summary|striptags %}
 {% set siteRoot = '/' %}
+{{ block('content')|replace({'${csrfInput}': csrfInput()})|raw }}
 
 {% cache %}
 	{% minify %}
