--- a/templates/layouts/_error.twig
+++ b/templates/layouts/_error.twig
@@ -1,5 +1,6 @@
 {% set description = entry.summary %}
 {% set siteRoot = '/' %}
+{{ block('content')|replace({'${csrfInput}': csrfInput()})|raw }}
 
 {% cache %}
 	{% minify %}
