--- a/templates/layouts/_home.twig
+++ b/templates/layouts/_home.twig
@@ -1,6 +1,7 @@
 {% set title = entry.title %}
 {% set description = entry.summary|striptags %}
 {% set siteRoot = '/' %}
+{{ block('content')|replace({'${csrfInput}': csrfInput()})|raw }}
 
 {% cache %}
 	{% minify %}
