--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -35,7 +35,11 @@
 						{% from _self import errorList %}
 
 						<form method="post" action="" accept-charset="UTF-8" id="ajax-contact">
-							${csrfInput}
+							{# {% nocache %}
+								{{ csrfInput() }}
+							{% endnocache %} #}
+							{# {{ csrfInput() }} #}
+							%%MY_CSRF%%
 							<input type="hidden" name="action" value="contact-form/send">
 							{# {{ redirectInput('pages/contact') }} #}
 							<div class="small-12" itemprop="text">
